plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'kr.co.pei'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	// FRAMEWORK
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc' // 나중에 config 추가 (spring batch)

	// HIBERNATE
	implementation 'io.hypersistence:hypersistence-utils-hibernate-60:3.3.1'

	// JACKSON
	implementation 'com.fasterxml.jackson.module:jackson-module-jakarta-xmlbind-annotations'

	// QUERY DSL
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
	testImplementation 'io.projectreactor:reactor-test'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// REDIS
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// MONGO
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

	// SECURITY
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'commons-validator:commons-validator:1.7'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation  'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation  'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// LOMBOK
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// MYSQL
	runtimeOnly 'com.mysql:mysql-connector-j'

	// APACHE POI
	implementation 'org.apache.poi:poi-ooxml:5.4.0'

	// ELASTIC SEARCH
//	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

	// SWAGGER
	implementation 'org.modelmapper:modelmapper:3.1.0'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

	// SMTP
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// CoolSMS
	implementation 'net.nurigo:sdk:4.2.7'

	// ENV
	implementation 'io.github.cdimascio:java-dotenv:5.2.2'

	// ## TEST
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.springframework.batch:spring-batch-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
